# wgpu-boids

./: Cargo.toml  README.md
client/: index.html  package.json
client/src/: App.tsx
src/: compute.wgsl  lib.rs  main.rs  model.rs  sprite.wgsl  state.rs
