[package]
edition = "2021"
name = "wgpu-boids"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = {version = "1.13.1", features = ["derive"]}
cfg-if = "1.0.0"
env_logger = "0.10.0"
pollster = "0.3.0"
rand = "0.8.5"
web-sys = {version = "0.3.64", features = [
  "console",
  "Document",
  "Window",
  "Element",
]}
wgpu = "0.16.1"
winit = "0.28.6"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
getrandom = {version = "0.2.10", features = ["js"]}
wasm-bindgen = "0.2.86"
wasm-bindgen-futures = "0.4.37"

[lib]
crate-type = ["cdylib", "rlib"]
